edit for compatibility with webp images

--- a/nginx/wordpress.conf
+++ b/nginx/wordpress.conf
@@ -11,7 +11,7 @@ server {
         try_files $uri $uri/ /index.php?$args;
     }
 
-    location ~ \.(png|jpg|jpeg|gif|svg)$ {
+    location ~ \.(png|jpg|jpeg|gif|svg|webp)$ {
         try_files $uri $uri/;
     }
 
